--- a/about.html
+++ b/about.html
@@ -127,8 +127,8 @@
                                     >Hy-CoRA는 컴퓨터 기술을 배우고 협업
                                     프로젝트를 통해 함께 성장하는 한양대학교
                                     ERICA의 학술 동아리입니다. <br />
-                                    다양한 전공의 학생들이 모여 실무 중심의
-                                    경험과 지식을 쌓고 있습니다.</p2
+                                    여러 전공의 학생들이 모여 다양한 경험과
+                                    지식을 쌓고 있습니다.</p2
                                 >
                             </div>
                             <div class="card">
@@ -148,8 +148,9 @@
                                     <span class="icon"> 운영진 </span>
                                 </div>
                                 <p2
-                                    >회장, 부회장, 교육·프로젝트·운영 파트
-                                    리드로 구성되어 효율적인 활동을 지원합니다.
+                                    >회장, 부회장, 총무, 교육, 홍보, 집행,
+                                    디자인으로 구성되어 효율적인 활동을
+                                    지원합니다.
                                     <br />
                                     각 파트가 역할을 나누어 원활한 진행과
                                     체계적인 운영을 유지합니다.
@@ -183,7 +184,7 @@
                                     Hackerthon 대상 수상
                                 </div>
                                 <div class="intro-history-box">
-                                    2023.09.17 사이언스밸리과학축제
+                                    2023.09.17 : 안산 사이언스밸리 과학축제
                                     청년창의우수프로그램 선정
                                 </div>
                                 <div class="intro-history-box">
@@ -366,11 +367,7 @@
                                     <div class="card-body">
                                         <h3 class="name">박강호</h3>
                                         <div class="role">집행 · Execution</div>
-                                        <p class="desc">
-                                            행동대장 <br />
-                                            (두목이나 간부의 지시를 받아 직접
-                                            행동을 수행)
-                                        </p>
+                                        <p class="desc">행동대장 <br /></p>
                                         <div class="btn-row">
                                             <a
                                                 href="https://www.instagram.com/ohgnakrap9290/"
@@ -464,8 +461,14 @@
                                             데이터 분석 기초반
                                         </h4>
                                         <p3 class="learning-desc"
-                                            >해당 스터디는 python jupyter 노트북 환경에서 데이터분석에 주로 사용되는 python 패키지(pandas, numpy, seaborn, matplotlib 등)의 사용법을 익히고 이를 실전에 적용해보는 것을 목표로 하고 있습니다. 이론과 실습을 병행하여 스터디를 진행할 예정입니다. </p3
-                                        >
+                                            >해당 스터디는 python jupyter 노트북
+                                            환경에서 데이터분석에 주로 사용되는
+                                            python 패키지(pandas, numpy,
+                                            seaborn, matplotlib 등)의 사용법을
+                                            익히고 이를 실전에 적용해보는 것을
+                                            목표로 하고 있습니다. 이론과 실습을
+                                            병행하여 스터디를 진행할 예정입니다.
+                                        </p3>
                                     </div>
                                 </article>
 
