--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="shape trapezoid">
                         <h3 class="core-title">도전과 성취</h3>
                         <p class="core-text trapezoid-text">
-                            교내외 공모전 및 해커톤에 적극적으로 참여하며,
+                            교내외 공모전 및 해커톤에 적극적으로 도전하며,
                             실질적인 성과를 만들어내는 것을 목표로 합니다.
                         </p>
                     </div>
