--- a/about.html
+++ b/about.html
@@ -212,12 +212,12 @@
                                         200억 탈세한 그 사람 아닙니다.
                                     </p>
                                     <div class="btn-row">
-                                        <a href="https://www.instagram.com/khj_0402/" target="_blank" rel="noopener"
+                                        <a href="https://www.instagram.com/arcsvx" target="_blank" rel="noopener"
                                             class="pill social-icon social-icon-leader" aria-label="이한 인스타그램">
                                             <i class="fab fa-instagram"></i>
                                         </a>
 
-                                        <a href="https://github.com/Kim-Han-Kyeol" target="_blank" rel="noopener"
+                                        <a target="_blank" rel="noopener"
                                             class="pill social-icon social-icon-leader" aria-label="이한 깃허브">
                                             <i class="fab fa-github"></i>
                                         </a>
@@ -232,12 +232,12 @@
                                     <div class="role">교육 · Education</div>
                                     <p class="desc">자유로운 교육 담당자</p>
                                     <div class="btn-row">
-                                        <a href="https://www.instagram.com/h._.j128/" target="_blank" rel="noopener"
+                                        <a href="https://www.instagram.com/lee_sang_c/" target="_blank" rel="noopener"
                                             class="pill social-icon social-icon-leader" aria-label="이한 인스타그램">
                                             <i class="fab fa-instagram"></i>
                                         </a>
 
-                                        <a href="https://github.com/HyunJun128" target="_blank" rel="noopener"
+                                        <a target="_blank" rel="noopener"
                                             class="pill social-icon social-icon-leader" aria-label="이한 깃허브">
                                             <i class="fab fa-github"></i>
                                         </a>
@@ -252,14 +252,14 @@
                                     <div class="role">
                                         홍보 · Public Relations
                                     </div>
-                                    <p class="desc">컴퓨터학부 씹인싸</p>
+                                    <p class="desc">안산버거킬러</p>
                                     <div class="btn-row">
-                                        <a href="https://www.instagram.com/uij_tw.sx/" target="_blank" rel="noopener"
+                                        <a href="https://www.instagram.com/jjuse_k1q/" target="_blank" rel="noopener"
                                             class="pill social-icon social-icon-leader" aria-label="이한 인스타그램">
                                             <i class="fab fa-instagram"></i>
                                         </a>
 
-                                        <a href="https://github.com/LeeHan20/HY-CoRA_website" target="_blank"
+                                        <a target="_blank"
                                             rel="noopener" class="pill social-icon social-icon-leader"
                                             aria-label="이한 깃허브">
                                             <i class="fab fa-github"></i>
@@ -280,7 +280,7 @@
                                             <i class="fab fa-instagram"></i>
                                         </a>
 
-                                        <a href="https://github.com/LeeHan20/HY-CoRA_website" target="_blank"
+                                        <a target="_blank"
                                             rel="noopener" class="pill social-icon social-icon-leader"
                                             aria-label="이한 깃허브">
                                             <i class="fab fa-github"></i>
